<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".ShippingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/shipping_name"
            style="@style/edit_white_trans_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="@dimen/_5sdp"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/shipping_email"
            style="@style/edit_white_trans_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableLeft="@drawable/mail"
            android:drawablePadding="@dimen/_5sdp"
            android:hint="@string/your_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/shipping_contact"
            style="@style/edit_white_trans_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableLeft="@drawable/phone"
            android:drawablePadding="@dimen/_5sdp"
            android:hint="@string/contact_number"
            android:inputType="phone"
            android:maxLength="10" />

        <EditText
            android:id="@+id/shipping_address"
            style="@style/edit_white_trans_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawablePadding="@dimen/_5sdp"
            android:gravity="start"
            android:hint="@string/address"
            android:minLines="3" />

        <Spinner
            android:id="@+id/shipping_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/white_transparent_70" />

        <RadioGroup
            android:id="@+id/shipping_payment_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/shipping_cod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cod"
                android:textColor="@color/white_transparent_70"
                app:buttonTint="@color/white_transparent_70" />

            <RadioButton
                android:id="@+id/shipping_online"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/online"
                android:textColor="@color/white_transparent_70"
                app:buttonTint="@color/white_transparent_70" />

        </RadioGroup>

        <Button
            android:id="@+id/shipping_button"
            style="@style/button_green_bold_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_20sdp"
            android:text="Pay" />

    </LinearLayout>

</ScrollView>