<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".ProductDetailActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/product_detail_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:layout_margin="@dimen/_10sdp"
            android:src="@drawable/travel_package" />

        <TextView
            style="@style/text_white_trans_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/product_name" />

        <TextView
            android:id="@+id/product_detail_name"
            style="@style/text_white_bold_18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="Travel Package" />

        <TextView
            style="@style/text_white_trans_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/product_price" />

        <TextView
            android:id="@+id/product_detail_price"
            style="@style/text_white_bold_18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="₹10000/Package" />

        <TextView
            style="@style/text_white_trans_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/product_description" />

        <TextView
            android:id="@+id/product_detail_description"
            style="@style/text_white_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="Choose from dozens of Holiday Packages &amp; Book your Dream Vacation with MakeMyTrip. Grab exciting discounts for your upcoming Holidays to our most-loved destinations. Customized Tour Packages. Best Deals Guaranteed. Special Online Discounts." />

    </LinearLayout>

</ScrollView>